Add server and apply rate limiting

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev --manual",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/index.js",
+    "build": "run-s build:*",
+    "build:remix": "remix build --sourcemap",
+    "build:server": "tsx ./other/build-server.ts",
+    "dev": "remix dev -c \"node ./server/dev-server.js\" --manual",
+    "test": "playwright test",
+    "start": "cross-env NODE_ENV=production node .",
+    "lint": "eslint .",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -21,9 +24,15 @@
     "@remix-run/node": "^2.8.0",
     "@remix-run/react": "^2.8.0",
     "@remix-run/serve": "^2.8.0",
+    "address": "^2.0.2",
     "class-variance-authority": "^0.7.0",
+    "close-with-grace": "^1.3.0",
+    "compression": "^1.7.4",
     "crypto-js": "^4.2.0",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
     "isbot": "^3.6.8",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-utils": "^7.1.0",
@@ -33,6 +42,9 @@
   "devDependencies": {
     "@remix-run/dev": "^2.8.0",
     "@remix-run/eslint-config": "^2.8.1",
+    "@types/compression": "^1.7.5",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
