Get started with prisma and sqlite

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@conform-to/react": "^1.0.4",
     "@conform-to/zod": "^1.0.4",
     "@mswjs/data": "^0.16.1",
+    "@prisma/client": "^5.11.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@remix-run/css-bundle": "^2.8.0",
@@ -58,6 +59,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-sql": "^0.18.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^5.11.0",
     "remix-flat-routes": "^0.6.4",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
