--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@remix-run/css-bundle": "^2.8.0",
     "@remix-run/node": "^2.8.0",
     "@remix-run/react": "^2.8.0",
@@ -37,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-utils": "^7.1.0",
+    "spin-delay": "^2.0.0",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
   },
@@ -51,6 +53,7 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "autoprefixer": "^10.4.16",
+    "chalk": "^5.3.0",
     "enforce-unique": "^1.3.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^9.1.0",
