--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@conform-to/react": "^1.0.4",
     "@conform-to/zod": "^1.0.4",
     "@mswjs/data": "^0.16.1",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
