--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mswjs/data": "^0.16.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.12.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -39,6 +40,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-utils": "^7.1.0",
+    "sonner": "^1.4.41",
     "spin-delay": "^2.0.0",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
