--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "autoprefixer": "^10.4.16",
     "chalk": "^5.3.0",
+    "date-fns": "^3.6.0",
     "enforce-unique": "^1.3.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^9.1.0",
