--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@remix-run/react": "^2.8.0",
     "@remix-run/serve": "^2.8.0",
     "address": "^2.0.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "close-with-grace": "^1.3.0",
     "compression": "^1.7.4",
@@ -49,6 +50,7 @@
     "@faker-js/faker": "^8.4.1",
     "@remix-run/dev": "^2.8.0",
     "@remix-run/eslint-config": "^2.8.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
