--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@conform-to/dom": "^1.0.4",
     "@conform-to/react": "^1.0.4",
     "@conform-to/zod": "^1.0.4",
+    "@epic-web/totp": "^1.1.2",
     "@mswjs/data": "^0.16.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.12.1",
