--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-rate-limit": "^7.2.0",
     "isbot": "^3.6.8",
     "morgan": "^1.10.0",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-utils": "^7.6.0",
@@ -57,6 +58,7 @@
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
