--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@epic-web/totp": "^1.1.2",
     "@mswjs/data": "^0.16.1",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "^5.12.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
@@ -39,11 +38,14 @@
     "crypto-js": "^4.2.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "fs-extra": "^11.2.0",
     "isbot": "^3.6.8",
     "morgan": "^1.10.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-auth": "^3.6.0",
+    "remix-auth-github": "^1.7.0",
     "remix-utils": "^7.6.0",
     "sonner": "^1.4.41",
     "spin-delay": "^2.0.0",
@@ -52,11 +54,13 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@prisma/client": "^5.14.0",
     "@remix-run/dev": "^2.8.0",
     "@remix-run/eslint-config": "^2.8.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
+    "@types/fs-extra": "^11.0.4",
     "@types/morgan": "^1.9.9",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.20",
@@ -72,11 +76,13 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "i": "^0.3.7",
     "msw": "^2.2.14",
+    "npm": "^10.8.0",
     "prettier": "^3.2.5",
     "prettier-plugin-sql": "^0.18.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.13.0",
+    "prisma": "^5.14.0",
     "remix-flat-routes": "^0.6.4",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
