--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -17,5 +17,9 @@
     "use_new_terminal": true,
     "allow_concurrent_runs": false,
     "reveal": "always"
+  },
+  {
+    "label": "Prisma DB Seed",
+    "command": "npx prisma db seed"
   }
 ]
