--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ tsconfig.tsbuildinfo
 
 # Easy way to create temporary files/folders that won't accidentally be added to git
 *.local.*
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
