--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/set-cookie-parser": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "autoprefixer": "^10.4.16",
     "chalk": "^5.3.0",
@@ -97,6 +98,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.14.0",
     "remix-flat-routes": "^0.6.4",
+    "set-cookie-parser": "^2.6.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.1",
