--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "@types/react-dom": "^18.2.7",
     "@types/set-cookie-parser": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^1.6.0",
     "autoprefixer": "^10.4.16",
     "chalk": "^5.3.0",
     "date-fns": "^3.6.0",
@@ -104,7 +106,8 @@
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vite": "^5.2.12",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0"
   },
   "engines": {
     "node": ">=18.0.0"
