--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "sideEffects": false,
   "type": "module",
+  "imports": {
+    "#*": "./*"
+  },
   "scripts": {
     "build": "run-s build:*",
     "build:icons": "tsx ./other/build-icons.ts",
@@ -68,6 +71,8 @@
     "@remix-run/dev": "^2.8.0",
     "@remix-run/eslint-config": "^2.8.1",
     "@sly-cli/sly": "^1.10.0",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/react": "^16.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
@@ -75,8 +80,8 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.12",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/set-cookie-parser": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@vitejs/plugin-react": "^4.3.1",
@@ -92,6 +97,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "i": "^0.3.7",
+    "jsdom": "^24.1.0",
     "msw": "^2.3.0",
     "node-html-parser": "^6.1.13",
     "npm": "^10.8.0",
