--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@remix-run/eslint-config": "^2.8.1",
     "@sly-cli/sly": "^1.10.0",
     "@testing-library/dom": "^10.1.0",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
@@ -97,6 +98,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "i": "^0.3.7",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.1.0",
     "msw": "^2.3.0",
     "node-html-parser": "^6.1.13",
